nemesis/static/css/style.css
/* ... */
.idle-modal .idle-countdown {
    text-align: center;
}
.idle-modal .modal-footer {
    text-align: center;
    margin-top: 0;
}

.pagination.pagination-nomargin {
    margin: 0;
}

.row .vertical-divider {
  border-right: 3px solid #d2def9;
}

/*formstamp widgets*/
.nopadding.fs-racheck,
.nopadding > .fs-racheck{
    padding: 0;
}

/* testing! */

.ng-invalid.form-control {
    border-color: #a94442;
    -webkit-box-shadow: inset 0 3px 3px rgba(0, 0, 0, .075);
    box-shadow: inset 0 3px 3px rgba(0, 0, 0, .075);
}

.ng-invalid.form-control:focus {
    border-color: #843534;
    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 6px #ce8483;
    box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 6px #ce8483;
}

.abs-alert{
    position: fixed;
    top: 20%;
    left: 35%;
    right: 35%;
    z-index: 1100;
}

.text-bold {
    font-weight: bold;
}
.text-white {
  color: #ffffff;
}
.sidebar-collapse .user-panel {
    display: none;
    visibility: hidden;
}

@media (min-width: 768px) {
    .sidebar-mini.sidebar-collapse .sidebar-menu > li:hover > a > span:not(.pull-right),
    .sidebar-mini.sidebar-collapse .sidebar-menu > li:hover > .treeview-menu {
        width: 210px !important;
        left: 30px !important;
    }
}

